--- a/main.html
+++ b/main.html
@@ -8,41 +8,41 @@
     <script src="https://kit.fontawesome.com/0eb9458fd3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caudex&family=Josefin+Sans:wght@100;300&display=swap" rel="stylesheet">
     <title>Dietitian Website</title>
 </head>
 <body>
     <div class="main">
-        <header>
-            <a href="main.html">
-                <h1>Amy Kohler</h1>
-                <p>Dietitian</p>
-            </a>
-        </header>
-        <nav class="top">
-            <div class="login">
-                <i class="fa-solid fa-circle-user"></i>
-                <p>Log In</p>
-            </div>
-            <div class="menu">
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="pricing.html">Pricing Plans</a>
-                <a href="programs.html">Programs</a>
-                <a href="blog.html">Blog</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </nav>
+        <div class="top">
+            <header>
+                <a href="main.html">
+                    <h1>Amy Kohler</h1>
+                    <p>Dietitian</p>
+                </a>
+            </header>
+            <nav class="topMenu">
+                <div class="login">
+                    <p>Log In</p>
+                </div>
+                <div class="menu">
+                    <a href="about.html">About</a>
+                    <a href="services.html">Services</a>
+                    <a href="pricing.html">Pricing Plans</a>
+                    <a href="programs.html">Programs</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+            </nav>
+        </div>
         <main>
             <aside>
                 <div class="socialsSide">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-pinterest-p"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <div class="chatbox">
-                    <i class="fa-solid fa-message"></i>
                     <p>Let's Chat!</p>
                 </div>
             </aside>
