--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
                     <p>Dietitian</p>
                 </a>
             </header>
-            <nav class="topMenu">
+            <nav>
                 <div class="login">
                     <p>Log In</p>
                 </div>
@@ -34,18 +34,18 @@
                 </div>
             </nav>
         </div>
+        <aside>
+            <div class="socials">
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <div class="chatbox">
+                <p>Let's Chat!</p>
+            </div>
+        </aside>
         <main>
-            <aside>
-                <div class="socialsSide">
-                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
-                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                </div>
-                <div class="chatbox">
-                    <p>Let's Chat!</p>
-                </div>
-            </aside>
             <section class="quote">
                 <p>“Our Food Should Be Our Medicine & Our Medicine Should Be Our Food”</p>
                 <button>Book a Session</button>
@@ -87,30 +87,32 @@
             </section>
         </main>
     </div>
-    <nav class="bottom">
-        <div class="title">
-            <a href="main.html">
-                <h1>Amy Kohler</h1>
-                <p>Dietitian</p>
-            </a>
-        </div>
-        <div class="bottomMenu">
-            <div class="socials">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-pinterest-p"></i>
-                <i class="fa-brands fa-instagram"></i>
+    <div class="bottom">
+        <div class="menu">
+            <div class="title">
+                <a href="main.html">
+                    <h1>Amy Kohler</h1>
+                    <p>Dietitian</p>
+                </a>
             </div>
-            <div class="menu">
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="pricing.html">Pricing Plans</a>
-                <a href="programs.html">Programs</a>
-                <a href="blog.html">Blog</a>
-                <a href="contact.html">Contact</a>
-            </div>
+            <nav>
+                <div class="socials">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-pinterest-p"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="menu">
+                    <a href="about.html">About</a>
+                    <a href="services.html">Services</a>
+                    <a href="pricing.html">Pricing Plans</a>
+                    <a href="programs.html">Programs</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </div>
     <footer>
         <p>© 2023 by Amy Kohler. Proudly created with Wix.com</p>
     </footer>
