top&bottom complete

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                 <div class="login">
                     <p>Log In</p>
                 </div>
-                <div class="menu">
+                <div class="navigation">
                     <a href="about.html">About</a>
                     <a href="services.html">Services</a>
                     <a href="pricing.html">Pricing Plans</a>
@@ -97,12 +97,12 @@
             </div>
             <nav>
                 <div class="socials">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-pinterest-p"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <div class="menu">
+                <div class="navigation">
                     <a href="about.html">About</a>
                     <a href="services.html">Services</a>
                     <a href="pricing.html">Pricing Plans</a>
