--- a/main.html
+++ b/main.html
@@ -47,20 +47,20 @@
         </aside>
         <main>
             <section class="quote">
-                <p>“Our Food Should Be Our Medicine & Our Medicine Should Be Our Food”</p>
+                <h2>“Our Food Should Be Our Medicine & Our Medicine Should Be Our Food”</h2>
                 <button>Book a Session</button>
             </section>
             <section  class="intro">
-                <h2>Meet Amy</h2>
+                <h3>Meet Amy</h3>
                 <p>
                     I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.
                 </p>
                 <button>Read More</button>
             </section>
             <section class="counselling">
-                <h2>Dietitian Counseling</h2>
+                <h3>Dietitian Counseling</h3>
                 <div class="session">
-                    <h2>Initial Assessment</h2>
+                    <h3>Initial Assessment</h3>
                     <p>1 hr</p>
                     <p>$75</p>
                     <button>Book Now</button>
@@ -68,7 +68,7 @@
                 <button>All Sessions</button>
             </section>
             <section class="recipes">
-                <h2>Recipes & Tips</h2>
+                <h3>Recipes & Tips</h3>
                 <p>
                     I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font.
                 </p>
@@ -77,7 +77,7 @@
                     <div class="postContent">
                         <p>Admin <i class="fa-solid fa-crown"></i></p>
                         <p>Aug 25 • 1 min</p>
-                        <h2>How Dietitians Fuel for the Morning</h2>
+                        <h3>How Dietitians Fuel for the Morning</h3>
                     </div> 
                     <div class="comment">
                         <i class="fa-regular fa-message"></i><p>O</p>
