flex adjustments, main added

--- a/programs.html
+++ b/programs.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caudex&family=Josefin+Sans:wght@100;300&display=swap" rel="stylesheet">
-    <title>Dietitian Website</title>
+    <title>Programs</title>
 </head>
 <body>
     <div class="main">
@@ -47,10 +47,12 @@
         </aside>
         <main>
             <section class="title">
-                <h2>Choose a Program</h2>
-                <p>
-                    I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
-                </p>
+                <div class="titleWrapper">
+                    <h2>Choose a Program</h2>
+                    <p>
+                        I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+                    </p>
+                </div>
             </section>
             <section class="services">
                 <div class="item">
