--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caudex&family=Josefin+Sans:wght@100;300&display=swap" rel="stylesheet">
-    <title>Dietitian Website</title>
+    <title>About</title>
 </head>
 <body>
     <div class="main">
@@ -47,23 +47,27 @@
         </aside>
         <main>
             <section class="title">
-                <h2>About</h2>
-                <p>
-                    I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
-                </p>
+                <div class="titleWrapper">
+                    <h2>About</h2>
+                    <p>
+                        I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+                    </p>
+                </div>
             </section>
             <section class="about">
                 <div class="portrait">
                     <img src="./pics/about1.webp" alt="Portrait of author sitting next to a green plant">
                 </div>
                 <div class="aboutAuthor">
-                    <h3>My Story</h3>
-                    <p>
-                        I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
-                    </p>
-                    <p>
-                        This is a great space to write a long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.
-                    </p>
+                    <div class="text">
+                        <h3>My Story</h3>
+                        <p>
+                            I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
+                        </p>
+                        <p>
+                            This is a great space to write a long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.
+                        </p>
+                    </div>
                 </div>
             </section>
             <section class="photos">
