--- a/services.html
+++ b/services.html
@@ -54,74 +54,76 @@
                     </p>
                 </div>
             </section>
-            <section class="services">
-                <div class="item">
-                    <div class="photo">
-                        <img src="/pics/services1.webp" alt="A photo of a plate full of healthy food">
+            <div class="servicesWrapper">
+                <section class="services">
+                    <div class="item">
+                        <div class="photo">
+                            <img src="/pics/services1.webp" alt="A photo of a plate full of healthy food">
+                        </div>
+                        <div class="description">
+                            <h3>Initial Assessment</h3>
+                            <p>1 hr</p>
+                            <p>$75</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                    <div class="description">
-                        <h3>Initial Assessment</h3>
-                        <p>1 hr</p>
-                        <p>$75</p>
-                        <button>Book Now</button>
+                    <div class="item">
+                        <div class="photo">
+                            <img src="/pics/services2.webp" alt="A photo of the author with a laptop, smiling at the camera">
+                        </div>
+                        <div class="description">
+                            <h3>Personal Counseling</h3>
+                            <p>1 hr</p>
+                            <p>$75</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="photo">
-                        <img src="/pics/services2.webp" alt="A photo of the author with a laptop, smiling at the camera">
+                    <div class="item">
+                        <div class="photo">
+                            <img src="/pics/services3.webp" alt="An overhead photo of a chopping board surrounded by green vegetables">
+                        </div>
+                        <div class="description">
+                            <h3>Lifestyle Workshop</h3>
+                            <p>1 hr</p>
+                            <p>$75</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                    <div class="description">
-                        <h3>Personal Counseling</h3>
-                        <p>1 hr</p>
-                        <p>$75</p>
-                        <button>Book Now</button>
+                    <div class="item">
+                        <div class="photo">
+                            <img src="/pics/services4.webp" alt="A photo of a woman and a child in the kitchen, holding leafy greens">
+                        </div>
+                        <div class="description">
+                            <h3>Family Counseling</h3>
+                            <p>1 hr</p>
+                            <p>$75</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="photo">
-                        <img src="/pics/services3.webp" alt="An overhead photo of a chopping board surrounded by green vegetables">
+                    <div class="item">
+                        <div class="photo">
+                            <img src="/pics/services5.webp" alt="A photo of a glass full of almond milk, surrounded by whole almonds">
+                        </div>
+                        <div class="description">
+                            <h3>Food Sensitivities</h3>
+                            <p>1 hr</p>
+                            <p>$75</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                    <div class="description">
-                        <h3>Lifestyle Workshop</h3>
-                        <p>1 hr</p>
-                        <p>$75</p>
-                        <button>Book Now</button>
+                    <div class="item">
+                        <div class="photo">
+                            <img src="/pics/services6.webp" alt="A photo of a woman weighing cucumbers, her face ouf of shot">
+                        </div>
+                        <div class="description">
+                            <h3>Weight Management</h3>
+                            <p>1 hr</p>
+                            <p>$75</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="photo">
-                        <img src="/pics/services4.webp" alt="A photo of a woman and a child in the kitchen, holding leafy greens">
-                    </div>
-                    <div class="description">
-                        <h3>Family Counseling</h3>
-                        <p>1 hr</p>
-                        <p>$75</p>
-                        <button>Book Now</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="photo">
-                        <img src="/pics/services5.webp" alt="A photo of a glass full of almond milk, surrounded by whole almonds">
-                    </div>
-                    <div class="description">
-                        <h3>Food Sensitivities</h3>
-                        <p>1 hr</p>
-                        <p>$75</p>
-                        <button>Book Now</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="photo">
-                        <img src="/pics/services6.webp" alt="A photo of a woman weighing cucumbers, her face ouf of shot">
-                    </div>
-                    <div class="description">
-                        <h3>Weight Management</h3>
-                        <p>1 hr</p>
-                        <p>$75</p>
-                        <button>Book Now</button>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </main>
     </div>
     <div class="bottom">
