--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caudex&family=Josefin+Sans:wght@100;300&display=swap" rel="stylesheet">
-    <title>Services</title>
+    <title>Blog</title>
 </head>
 <body>
     <div class="main">
